# XScript2LibSocket

./: .gitignore  .gitmodules  LICENCE  PackageManagerConfig.json  README.md
.github/workflows/: action.yml
Sources/Main/: Main.xs
Sources/Native/: CMakeLists.txt  library.cpp  library.h
Sources/Native/Share/: Utils.cpp  Utils.hpp
